HTTP/2 - Enable http2 H2C (#483)
* Squashed commit of the following:

commit 7f26aa667b91f09f0e647cf8c11269e5c8ea225c
Author: Niccolò Maltoni <niccolo.maltoni@diennea.com>
Date:   Wed May 24 11:33:01 2023 +0200

    test: repair tests

commit 133c9b85f4d09bead73c0838f192d0438a1d12d2
Author: Niccolò Maltoni <niccolo.maltoni@diennea.com>
Date:   Wed May 24 11:32:12 2023 +0200

    feat: adding HTTP/2.0 protocol support to server configuration

commit 92778b01c3ef7badc68fe15b0049ee9317e8591e
Author: Niccolò Maltoni <niccolo.maltoni@diennea.com>
Date:   Tue May 23 09:10:51 2023 +0200

    feat: adding HTTP/2.0 protocol support to server

commit 3b664e31dfd12a14c3d9055129edf02b33286e80
Author: Niccolò Maltoni <niccolo.maltoni@diennea.com>
Date:   Tue May 23 09:08:18 2023 +0200

    test: ignore JUnit Jupiter transitive dep

    see #440

* Squashed commit of the following:

commit e406f5ce45b85c4dd998ab17ff1c765a0d157e7a
Author: Niccolò Maltoni <niccolo.maltoni@diennea.com>
Date:   Wed Nov 8 10:57:47 2023 +0100

    feat: HTTP/2 seems to work

commit b862985ed925bfee9a4e3e9bdb7a1c54ccfe43be
Author: Niccolò Maltoni <niccolo.maltoni@diennea.com>
Date:   Tue Nov 7 15:38:44 2023 +0100

    chore: stash commit

commit 55e4a61425d098204bb1e96ef225843b2df57ad7
Author: Niccolò Maltoni <niccolo.maltoni@diennea.com>
Date:   Thu Nov 2 13:45:45 2023 +0100

    Revert "test: trying to enforce H11, H2, and H2c with secure on forward"

    This reverts commit 9e9e422c8f60841ad646af8b784be66e915c1dd9.

commit 9e9e422c8f60841ad646af8b784be66e915c1dd9
Author: Niccolò Maltoni <niccolo.maltoni@diennea.com>
Date:   Thu Nov 2 13:45:34 2023 +0100

    test: trying to enforce H11, H2, and H2c with secure on forward

commit e4db43ef70eef65ee08533b5c7acb94e060ff7b1
Author: Niccolò Maltoni <niccolo.maltoni@diennea.com>
Date:   Thu Nov 2 12:33:55 2023 +0100

    test: workaround on test fixing

commit 3cbee46517538de8661a0156a63cc4f8f655